[workspace]
# BACE-optimized workspace structure:
# - Foundation crates (BACE + core infrastructure)
# - Subsystems in their own workspaces (avoid circular dependencies)
# For the Tauri app: cd bonsai-workspace && cargo tauri build
# For BACE-accelerated builds: cargo bace build

resolver = "2"

members = [
    # ========== LAIR (Language-Agnostic IR) ==========
    "crates/core-ir",                  # Language-Agnostic Intermediate Representation

    # ========== BACE Foundation (Function-Level Compilation) ==========
    "crates/compile-cache",            # Local compilation cache
    "crates/cas-ext",                  # CAS extensions for BACE
    "crates/hotreload",                # Hot-reload macro and runtime
    "crates/bace-rustc",               # BACE Rust compiler wrapper
    "crates/bace-rt",                  # BACE runtime and proc-macro
    "crates/cargo-bace",               # cargo-bace CLI subcommand

    # ========== Language System ==========
    "crates/language-system",          # Language frontend trait & registry
    "crates/regex-frontend",           # Regex fallback frontend for languages without LSP
    "lang-gen",                        # Meta-generator tool for creating language crates (root level)

    # ========== Language Runtimes ==========
    "crates/clojure-jvm",              # Clojure JVM runtime with sandbox

    # ========== Wave 2: Clojure Integration ==========
    "crates/titan-core",               # Phase 2: Verified Titan core (persistent data structures)
    "crates/clojurescript-compiler",   # Phase 3: ClojureScript compiler
    "crates/clojure-wasm",             # Phase 4: Clojure WASM
    "crates/aether-clojure",           # Phase 5: Aether distributed agents
    "crates/clojure-formal-verify",    # Phase 6: Clojure formal verification
    "crates/clojure-ecosystem",        # Phase 7: Clojure ecosystem & documentation

    # ========== Wave 3: HDE (Hybrid Determinism Engine) ==========
    "crates/hde-ai-advisor",           # Component 1: AI Advisor Orchestrator
    "crates/hde-safety-envelope",      # Component 2: Safety Envelope
    "crates/hde-model-framework",      # Component 3: Model Framework
    "crates/hde-shadow-mode",          # Component 4: Shadow Mode Validation
    "crates/hde-runtime",              # Integrated HDE runtime combining all components

    # ========== Wave 4: Bonsai Buddy ==========
    "crates/bonsai-buddy-backend",     # Tauri app backend foundation (IPC, API client, state, sync)
    "crates/bonsai-buddy-agent",       # Component 1: Standalone Agent
    "crates/bonsai-buddy-offline-sync", # Component 2: Offline Sync
    "crates/bonsai-buddy-crdt",        # Component 3: CRDT Snapshot Merging

    # ========== Integration & System Testing ==========
    "crates/omnisystem-integration-tests", # Full system integration tests
    "crates/omnisystem-examples",         # Usage examples and patterns
    "crates/omnisystem-config",           # Configuration and builder framework

    # ========== Service Management ==========
    "crates/service-manager",          # Service Lifecycle Manager (SLM) – Phase 2
    "crates/kernel-snapshot",          # Phase 1: Kernel extensions (snapshot_vault/restore_vault)
    "crates/ums-service",              # Phase 3: UMS service integration
    "crates/service-sdk",              # Phase 4: Service SDK (Snapshotable trait)
    "crates/buddy-agent",              # Phase 5: Bonsai Buddy integration
    "crates/hde-orchestrator",         # Phase 6: HDE AI Advisor Orchestrator
    "crates/model-builder",            # Phase 7: Model Building Framework
    "crates/axiom-verify",             # Phase 8: Axiom formal verification

    # ========== Compiled Objects ==========
    "crates/co",                       # Compiled Objects (serialized functions)

    # ========== Omnisystem Languages ==========
    "crates/omnisystem-sylva",         # Sylva scripting language
    "crates/omnisystem-titan",         # Titan systems language
    "crates/omnisystem-aether",        # Aether actor language

    # ========== Execution Backend ==========
    "crates/backend",                  # Hardware abstraction & device allocation

    # ========== Bare-Metal Kernel ==========
    # "crates/kernel",              # USOS Co-OS x86_64 bare-metal kernel (disabled: x86_64 crate has unstable features)

    # ========== Legacy Foundation (keep for compatibility) ==========
    "runtime",
    "src-daemon",

    # ========== Pre-Compilation Fabric ==========
    "crates/compiler-cache",           # Speculative pre-compilation with AI hints

    # ========== P2P Transport ==========
    "crates/p2p-identity",             # Self-certifying identity (Iroh-inspired)
    "crates/p2p-crypto",               # Post-quantum hybrid cryptography
    "crates/p2p-core",                 # Deterministic core (no AI required)
    "crates/transfer-ai",              # Optional AI enhancements (feature-gated)

    # ========== Messaging Fabric ==========
    "crates/msg-core",                 # Core messaging types and encryption
    "crates/msg-smtp",                 # SMTP server
    "crates/msg-imap",                 # IMAP server
    "crates/msg-p2p",                  # P2P delivery via TransferDaemon
    "crates/msg-server",
    "crates/model-workshop",           # Model training and management
    "crates/mcp-manager",              # MCP server management

    # ========== Environment Manager ==========
    "crates/sandbox",                  # Universal dependency and environment manager

    # ========== UI Orchestration ==========
    "crates/ui-orchestrator",          # UI component management
    "crates/ui-utils",                 # UI utilities and helpers

    # ========== Validation Mesh ==========
    "crates/test-orchestrator",        # Unified Test Orchestration Fabric
    "crates/ubvm-core",                # Core types and traits
    "crates/ubvm-ulb",                 # Universal Language Binding (750+ languages)
    "crates/ubvm-suites",              # 10 comprehensive test suites
    "crates/ubvm-axiom",               # Formal verification with Axiom
    "crates/ubvm-mesh",                # Planet-scale distributed mesh

    # ========== OpenCV 5 Integration ==========
    # Phase 2: Rust Port
    "crates/cv",                       # Rust FFI bindings and safe wrappers
    "crates/cv-async",                 # Async/await integration
    "crates/cv-tests",                 # UVM test harness

    # Phase 1: Native & Build System
    "crates/opencv-manifest",          # UMS module manifest definitions
    "crates/opencv-build",             # Build orchestration

    # Phase 3: Titan Rewrite
    "crates/titan-opencv",             # Titan core implementation
    "crates/titan-opencv-imgproc",     # Image processing module

    # Phase 4: Sylva Scripting
    "crates/sylva-opencv",             # Sylva scripting wrapper

    # Phase 5: Aether Distribution
    "crates/aether-vision",            # Distributed actor pipelines

    # Phase 6: Axiom Proofs
    "crates/axiom-opencv",             # Formal specifications

    # Phase 7: Validation & Rollout
    "crates/cv-uvm",                   # Universal Validation Mesh

    # ========== Omni-Bot (New Generation Control Agent) ==========
    "crates/omni-bot-core",            # Core types and traits
    "crates/omni-bot-actors",          # Aether actor implementations
    "crates/omni-bot-api",             # REST/WebSocket API layer
    "crates/omni-bot",                 # Main application
    "crates/omni-bot-tests",           # Comprehensive integration test suite

    # ========== SRWSTS (Stress, Resilience, Workload System Test Suite) ==========
    "crates/srwsts-core",              # Core types, traits, and error handling
    "crates/srwsts-schemas",           # YAML schema and parsing
    "crates/srwsts-orchestrator",      # Test execution and coordination
    "crates/srwsts-fault-injection",   # System fault simulation and recovery
    "crates/srwsts-chaos",             # Comprehensive chaos engineering framework
    "crates/srwsts-test-suites",       # Comprehensive modular test suites
    "crates/srwsts-integration",       # Integration with ecosystem components
    "crates/srwsts-emulation",         # Hardware and peripheral emulation engine
    "crates/srwsts-test-harness",      # Test execution harness with vault isolation
    "crates/srwsts-applications",      # Bonsai Ecosystem application stress testing
    "crates/srwsts-equivalence",       # Hardware equivalence validation system
    "crates/srwsts-kernel",            # UOSC kernel independent stress testing system
    "crates/srwsts-services",          # Omnisystem core services stress testing (P2P, Storage, Network, Compositor, etc.)
    "crates/srwsts-fullstack",         # Full-stack integrated testing system for Omnisystem
    "crates/srwsts-ci",                # CI/CD regression detection pipeline

    # ========== UNREGISTERED IMPLEMENTATIONS (Phase 1 Registration - 127 crates) ==========
    "crates/actors",                   # Actor system primitives
    "crates/adaptive-benchmarks",      # Adaptive performance benchmarking
    "crates/ahf-arbiter",              # AHF arbitration framework
    "crates/ahf-bias-detector",        # AHF bias detection and mitigation
    "crates/ahf-core",                 # AHF core infrastructure
    "crates/ahf-formal-verification",  # AHF formal verification engine
    "crates/ahf-formal-verifier",      # AHF formal verification implementation
    "crates/ahf-gateway",              # AHF gateway and routing
    "crates/ahf-integration-tests",    # AHF integration tests
    "crates/ahf-knowledge-grounding",  # AHF knowledge grounding
    "crates/ai-advisor",               # AI advisor and recommendations
    "crates/algorithm-optimization",   # Algorithm optimization framework
    "crates/android-bridge",           # Android FFI bridge
    "crates/api-bridge",               # API bridging and adapters
    "crates/api-gateway",              # API gateway and routing
    "crates/app-menu",                 # Application menu system
    "crates/array",                    # Array utilities and extensions
    "crates/audit-log",                # Audit logging framework
    "crates/auth",                     # Authentication and authorization
    "crates/bat",                      # Batch processing framework
    "crates/bedf-concurrency",         # BEDF concurrency utilities
    "crates/bedf-enhancements",        # BEDF enhancements
    "crates/bedf-fuzzing",             # BEDF fuzzing framework
    "crates/bedf-mcp",                 # BEDF MCP integration
    "crates/bedf-pentest",             # BEDF penetration testing
    "crates/bedf-property",            # BEDF property-based testing
    "crates/bedf-sandbox",             # BEDF sandboxing
    "crates/bedf-sanitizers",          # BEDF sanitizers
    "crates/bedf-triage",              # BEDF triage and diagnostics
    "crates/bedf.disabled",            # BEDF disabled/legacy code
    "crates/bkp",                      # Backup and recovery
    "crates/bmcs-empathy",             # BMCS empathy modeling
    "crates/bmcs-gateway",             # BMCS gateway
    "crates/bmcs-retriever",           # BMCS information retrieval
    "crates/bmcs-server",              # BMCS server
    "crates/bmn-ai-enhance",           # BMN AI enhancements
    "crates/bmn-cli",                  # BMN CLI
    "crates/bmn-common",               # BMN common utilities
    "crates/bmn-compositor",           # BMN compositor
    "crates/bmn-dashboard",            # BMN dashboard
    "crates/bmn-encoder",              # BMN encoder
    "crates/bmn-orchestrator",         # BMN orchestrator
    "crates/bmn-sources",              # BMN data sources
    "crates/bmn-transport",            # BMN transport layer
    "crates/bug-hunt",                 # Bug hunting utilities
    "crates/bug-hunter",               # Bug hunter framework
    "crates/buir",                     # Bytecode UIR
    "crates/buse-core",                # BUSE core
    "crates/bwe-core",                 # BWE core
    "crates/capability-registry",      # Capability registry
    "crates/cas",                      # Content-addressable storage
    "crates/chess",                    # Chess engine and utilities
    "crates/ci",                       # CI/CD integration
    "crates/cli",                      # Command-line interface
    "crates/clojure-ecosystem",        # Clojure ecosystem integration
    "crates/clojure-formal-verify",    # Clojure formal verification
    "crates/clojure-wasm",             # Clojure WASM compilation
    "crates/collaboration",            # Collaboration framework
    "crates/container",                # Container runtime
    "crates/coordinator",              # Coordination framework
    "crates/coverage",                 # Code coverage tracking
    "crates/crdt",                     # Conflict-free replicated data types
    "crates/creator",                  # Creation framework
    "crates/credits",                  # Credits and attribution
    "crates/dataframe",                # DataFrame implementation
    "crates/echo-ext",                 # Echo protocol extensions
    "crates/emulator",                 # Emulation framework
    "crates/error-types",              # Error type definitions
    "crates/eternal-workshop",         # Eternal workshop framework
    "crates/etl",                      # Extract-Transform-Load
    "crates/extension-converter",      # Extension format converter
    "crates/extensions",               # Extension framework
    "crates/fabric",                   # Fabric protocol
    "crates/failure-finder",           # Failure detection and analysis
    "crates/go",                       # Go language integration
    "crates/go-nn",                    # Go neural network bindings
    "crates/hdl",                      # Hardware description language
    "crates/hnsw",                     # Hierarchical navigable small world
    "crates/inference",                # Inference engine
    "crates/inference-telemetry",      # Inference telemetry
    "crates/ir",                       # Intermediate representation
    "crates/jit-optimizer",            # JIT optimization
    "crates/kdb",                      # Knowledge database
    "crates/kdb-ext",                  # KDB extensions
    "crates/kdb-sync",                 # KDB synchronization
    "crates/kef",                      # Knowledge exploration framework
    "crates/kernel",                   # Kernel integration
    "crates/knowledge",                # Knowledge framework
    "crates/kv-cache",                 # Key-value caching
    "crates/lint",                     # Linting framework
    "crates/lint-treesitter-aether",   # Aether linting via tree-sitter
    "crates/lint-treesitter-axiom",    # Axiom linting via tree-sitter
    "crates/lint-treesitter-sylva",    # Sylva linting via tree-sitter
    "crates/lint-treesitter-titan",    # Titan linting via tree-sitter
    "crates/mailbox",                  # Message mailbox
    "crates/marketplace",              # Marketplace framework
    "crates/mcp-server",               # MCP server implementation
    "crates/mobile-ffi",               # Mobile FFI bindings
    "crates/model-converter",          # Model format converter
    "crates/model-registry",           # Model registry
    "crates/model-scanner",            # Model scanning and analysis
    "crates/moe",                      # Mixture of Experts
    "crates/observability",            # Observability framework (metrics, logging, tracing)
    "crates/omnibot",                  # Omni-Bot main application
    "crates/omnisystem-axiom",         # Axiom language for Omnisystem
    "crates/p2p",                      # P2P protocol
    "crates/package",                  # Package management
    "crates/poe-bonsai-bridge",        # POE to Bonsai integration
    "crates/poe-boot",                 # POE bootstrap
    "crates/poe-bush-sim",             # POE simulation
    "crates/poe-core",                 # POE core
    "crates/poe-manifestation",        # POE manifestation
    "crates/poe-mesh",                 # POE mesh networking
    "crates/profiler",                 # Profiling framework
    "crates/query",                    # Query engine
    "crates/relay",                    # Relay framework
    "crates/remote-desktop",           # Remote desktop protocol
    "crates/resilience",               # Resilience and fault tolerance
    "crates/ring",                     # Ring cryptography
    "crates/root",                     # Root framework
    "crates/safety",                   # Safety utilities
    "crates/security-hardening",       # Security hardening
    "crates/skill-compiler",           # Skill compiler
    "crates/skills",                   # Skills framework
    "crates/sns",                      # SNS integration
    "crates/structured-output",        # Structured output formatting
    "crates/survival-system-ext",      # Survival system extensions
    "crates/swarm",                    # Swarm robotics/coordination
    "crates/sylva",                    # Sylva language runtime
    "crates/tdl",                      # Task description language
    "crates/testing",                  # Testing framework
    "crates/tool-registry",            # Tool registry
    "crates/tool-registry-vault",      # Tool registry vault
    "crates/trainer-orchestrator",     # Model trainer orchestration
    "crates/transfer-client",          # Transfer client
    "crates/transfer-store",           # Transfer storage
    "crates/trmkd",                    # Trademark utilities
    "crates/tui",                      # Terminal user interface
    "crates/verify",                   # Verification framework
    "crates/verify-agda",              # Agda verification
    "crates/verify-coq",               # Coq verification
    "crates/verify-fstar",             # F* verification
    "crates/verify-isabelle",          # Isabelle verification
    "crates/verify-lean",              # Lean verification
    "crates/verify-tla",               # TLA+ verification
    # "crates/watchdog",               # STANDALONE WORKSPACE - build independently: cargo build --manifest-path crates/watchdog/Cargo.toml

    # ========== REMAINING UNREGISTERED STUBS (Phase 2 Registration - 59 crates) ==========
    "crates/buse-mcp",                 # BUSE MCP integration
    "crates/icds",                     # Integrated Code Distribution System
    "crates/clojure-aether",           # Clojure Aether - Distributed agents
    "crates/clojure-core-titan",       # Clojure Titan core - Persistent data structures
    "crates/multistream-moe",          # Multi-stream Mixture of Experts
    "crates/octopus-ai",               # Octopus AI - Multi-language model (CRITICAL EMPTY)

    # ========== OMNISYSTEM LANGUAGE SUPPORT (49 languages) ==========
    "crates/omnisystem-ada",           # Ada language support
    "crates/omnisystem-apl",           # APL language support
    "crates/omnisystem-asm",           # Assembly language support
    "crates/omnisystem-c",             # C language support
    "crates/omnisystem-clojure",       # Clojure language support
    "crates/omnisystem-cobol",         # COBOL language support
    "crates/omnisystem-cplusplus",     # C++ language support
    "crates/omnisystem-cpp",           # C++ language support (alternative)
    "crates/omnisystem-csharp",        # C# language support
    "crates/omnisystem-cypher",        # Cypher query language support
    "crates/omnisystem-d",             # D language support
    "crates/omnisystem-dart",          # Dart language support
    "crates/omnisystem-elixir",        # Elixir language support
    "crates/omnisystem-erlang",        # Erlang language support
    "crates/omnisystem-fortran-77",    # Fortran 77 language support
    "crates/omnisystem-fortran-90",    # Fortran 90+ language support
    "crates/omnisystem-fsharp",        # F# language support
    "crates/omnisystem-go",            # Go language support
    "crates/omnisystem-graphql",       # GraphQL support
    "crates/omnisystem-groovy",        # Groovy language support
    "crates/omnisystem-haskell",       # Haskell language support
    "crates/omnisystem-html",          # HTML markup support
    "crates/omnisystem-java",          # Java language support
    "crates/omnisystem-javascript",    # JavaScript/Node.js support
    "crates/omnisystem-julia",         # Julia language support
    "crates/omnisystem-kotlin",        # Kotlin language support
    "crates/omnisystem-lisp",          # Lisp language support
    "crates/omnisystem-lua",           # Lua language support
    "crates/omnisystem-markup",        # Markup language support
    "crates/omnisystem-matlab",        # MATLAB language support
    "crates/omnisystem-nim",           # Nim language support
    "crates/omnisystem-nosql",         # NoSQL query language support
    "crates/omnisystem-objective-c",   # Objective-C language support
    "crates/omnisystem-ocaml",         # OCaml language support
    "crates/omnisystem-pascal",        # Pascal language support
    "crates/omnisystem-perl",          # Perl language support
    "crates/omnisystem-php",           # PHP language support
    "crates/omnisystem-prolog",        # Prolog language support
    "crates/omnisystem-python",        # Python language support
    "crates/omnisystem-r",             # R language support
    "crates/omnisystem-ruby",          # Ruby language support
    "crates/omnisystem-rust",          # Rust language support
    "crates/omnisystem-rust-native",   # Rust native code generation
    "crates/omnisystem-scala",         # Scala language support
    "crates/omnisystem-scheme",        # Scheme language support
    "crates/omnisystem-shell",         # Shell script language support
    "crates/omnisystem-sql",           # SQL language support
    "crates/omnisystem-swift",         # Swift language support
    "crates/omnisystem-typescript",    # TypeScript language support
    "crates/omnisystem-vbnet",         # VB.NET language support
    "crates/omnisystem-wasm",          # WebAssembly support
    "crates/omnisystem-xml",           # XML markup support
    "crates/omnisystem-zig",           # Zig language support
]

[workspace.lints.rust]
unsafe_code = "warn"
unused_results = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bonsai Team <team@bonsai.sh>"]
license = "Apache-2.0"
repository = "https://github.com/bonsai/bonsai-bedf"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dashmap = "5"
once_cell = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
handlebars = "4"
zstd = "0.13"
futures = "0.3"
rand = "0.8"

# ============================================================================
# Release Profile — Optimized for deployment
# ============================================================================
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16              # Balance: compile fast, link fast
panic = "abort"
strip = false                   # Keep symbols for crash triage
split-debuginfo = "packed"

# ============================================================================
# Development Profile — Optimized for instant feedback
# ============================================================================
[profile.dev]
debug = 1
opt-level = 0                   # No optimization, just compile
codegen-units = 256             # Max parallelism: 1 unit per core
incremental = true
split-debuginfo = "packed"

# ============================================================================
# Test Profile — Balance speed and coverage
# ============================================================================
[profile.test]
debug = 1
opt-level = 1
codegen-units = 256
incremental = true
split-debuginfo = "packed"

# ============================================================================
# BACE Profile — Optimized for function-level incremental compilation
# ============================================================================
[profile.bace-dev]
inherits = "dev"
codegen-units = 1            # Required for BACE function extraction
lto = false                  # BACE needs unoptimized code for hot-reload
opt-level = 0
debug = 2                    # Full debug info for BACE to map functions
incremental = true
