[package]
name = "bonsai-native"
version = "0.1.0"
edition = "2021"
description = "Thin Rust FFI wrapper around llama.cpp Vulkan backend for Bonsai GPU inference"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "sync"] }
sysinfo = "0.32"
once_cell = "1"

[build-dependencies]
cc = "1"

[lib]
name = "bonsai_native"
crate-type = ["rlib"]
