[package]
name = "omnisystem-gui"
version = "1.0.0"
description = "Omnisystem - Enterprise GPU Computing Platform"
authors = ["Omnisystem Project"]
edition = "2021"
rust-version = "1.70"

[package.metadata]
name = "omnisystem-gui"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["default"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "omnisystem-gui"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
