[workspace]
members = [
    "common",
    "orchestrator",
    "sandbox",
    "fuzzer",
    "energy",
    "bug-tracker",
    "graph-analyzer",
    "dashboard"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bonsai Team"]
license = "MIT"

[workspace.dependencies]
# Note: ai-advisor is part of the architecture to be implemented
# ai-advisor = { path = "../crates/ai-advisor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
axum = "0.7"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
