[package]
name        = "daemon"
version     = "0.1.0"
edition     = "2021"
description = "Headless Bonsai service — WebSocket JSON-RPC bridge for VSCode and other clients"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
p2p-crypto = { path = "../crates/p2p-crypto" }
transfer-store = { path = "../crates/transfer-store" }
p2p-core   = { path = "../crates/p2p-core" }
mailbox = { path = "../crates/mailbox" }
query = { path = "../crates/query" }
array = { path = "../crates/array" }
verify-lean = { path = "../crates/verify-lean" }
verify-fstar = { path = "../crates/verify-fstar" }
verify-tla = { path = "../crates/verify-tla" }
ci = { path = "../crates/ci" }
ui-orchestrator = { path = "../crates/ui-orchestrator" }

tokio        = { version = "1", features = ["full"] }
axum         = { version = "0.7", features = ["ws", "macros"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rand         = "0.8"
blake3       = "1"
hex          = "0.4"
dirs         = "5"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow       = "1"
tokio-tungstenite = { version = "0.21", optional = true }
uuid = { version = "1" }
actors = { path = "../crates/actors" }
cas = { path = "../crates/cas" }
tool-registry = { path = "../crates/tool-registry" }
skills = { path = "../crates/skills" }
skill-compiler = { path = "../crates/skill-compiler" }
verify-coq = { path = "../crates/verify-coq" }
verify-agda = { path = "../crates/verify-agda" }
verify-isabelle = { path = "../crates/verify-isabelle" }
capability-registry = { path = "../crates/capability-registry" }
sylva = { path = "../crates/sylva" }
p2p = { path = "../crates/p2p" }
creator = { path = "../crates/creator" }
arc-swap      = "1"
sysinfo       = "0.30"
tempfile      = "3"
