[workspace]
resolver = "2"
members = [
    "crates/api-marketplace-analytics",
    "crates/api-marketplace-catalog",
    "crates/api-marketplace-discovery",
    "crates/api-marketplace-docs",
    "crates/api-marketplace-monetization",
    "crates/api-marketplace-partners",
    "crates/api-marketplace-ratings",
    "crates/api-marketplace-versioning",
    "crates/business-analytics",
    "crates/business-billing",
    "crates/business-contracts",
    "crates/business-partners",
    "crates/business-payouts",
    "crates/business-pricing",
    "crates/business-revenue-sharing",
    "crates/business-sales",
    "crates/community-blogs",
    "crates/community-events",
    "crates/community-forums",
    "crates/community-partnerships",
    "crates/community-qa",
    "crates/community-recognition",
    "crates/community-samples",
    "crates/community-social",
    "crates/developer-portal-billing",
    "crates/developer-portal-dashboard",
    "crates/developer-portal-keys",
    "crates/developer-portal-projects",
    "crates/developer-portal-quotas",
    "crates/developer-portal-testing",
    "crates/developer-portal-usage",
    "crates/developer-portal-webhooks",
    "crates/integration-hub-core",
    "crates/integration-hub-errors",
    "crates/integration-hub-mapping",
    "crates/integration-hub-middleware",
    "crates/integration-hub-queues",
    "crates/integration-hub-retry",
    "crates/integration-hub-templates",
    "crates/integration-hub-webhooks",
    "crates/plugin-framework-core",
    "crates/plugin-framework-discovery",
    "crates/plugin-framework-installation",
    "crates/plugin-framework-marketplace",
    "crates/plugin-framework-monitoring",
    "crates/plugin-framework-revenue",
    "crates/plugin-framework-security",
    "crates/plugin-framework-updates",
    "crates/sdk-generator-core",
    "crates/sdk-generator-docs",
    "crates/sdk-generator-examples",
    "crates/sdk-generator-go",
    "crates/sdk-generator-java",
    "crates/sdk-generator-nodejs",
    "crates/sdk-generator-python",
    "crates/sdk-generator-types",
    "crates/training-bootcamps",
    "crates/training-certification",
    "crates/training-courses",
    "crates/training-exams",
    "crates/training-paths",
    "crates/training-progress",
    "crates/training-tutorials",
    "crates/training-workshops",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
