[package]
name = "adaptive-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = { version = "1.0", optional = true }
ndarray = "0.15"
ndarray-stats = "0.5"
rand = "0.8"
# Benchmarking utilities
flame = "0.2.5"
pprof = { version = "0.13", features = ["flamegraph"], optional = true }
# Testing utilities
approx = "0.5"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
regex = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["benchmarking", "property-tests"]
benchmarking = []
property-tests = ["proptest"]
formal-verification = []
distributed-testing = []

[[bench]]
name = "adaptive_scale_bench"
harness = false

[[bench]]
name = "correctness_bench"
harness = false

[[bench]]
name = "performance_bench"
harness = false

[[bench]]
name = "regression_bench"
harness = false
