[package]
name = "aether-clojure"
version = "1.0.0"
edition = "2021"
authors = ["Omnisystem Architecture Team"]
license = "Apache-2.0"
description = "Wave 2, Phase 5: Aether distributed actor framework for Clojure"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
