[package]
name = "ahf-formal-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ahf-core = { path = "../ahf-core" }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = "0.17"
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
