[package]
name = "ahf-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Anti-Hallucination Gateway (AHG) - Phase 5 orchestrator for AHF components"

[dependencies]
# AHF core and components
ahf-core = { path = "../ahf-core" }
ahf-formal-verifier = { path = "../ahf-formal-verifier" }
ahf-arbiter = { path = "../ahf-arbiter" }
ahf-bias-detector = { path = "../ahf-bias-detector" }

# Async and async-trait
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

